HW5 musical statements

--- a/Assignments/HW3_Vocoders/statements.html
+++ b/Assignments/HW3_Vocoders/statements.html
@@ -435,17 +435,6 @@
 										<iframe src = "statements/traliesig.html" width="80%" height=500></iframe>
 
 
-									<HR>
-										<h2>"Mystery Beeps"</h2>
-										<h3>by Anonymous</h3>
-
-										<audio controls>
-											<source src="statements/mysterybeeps.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio>
-											<p></p>
-
-
                                 </div>
 						</div>
 					</div>
@@ -506,9 +495,20 @@
 												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW3_Vocoders/statements.html">Musical Statements</a>
+													</li>
+												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
-												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a></li>
+												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW5_LetItBee/statements.html">Musical Statements</a>
+													</li>
+												</ul>
+												</li>
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
 											</ul>
 										</li>
