--- a/Assignments/HW5_LetItBee/statements.html
+++ b/Assignments/HW5_LetItBee/statements.html
@@ -41,215 +41,175 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-                                        <h1><a href = "index.html">Assignment 2: Digital Instruments</a></h1>
+                                        <h1><a href = "index.html">Assignment 5: Let It Bee</a></h1>
                                         <h2>Musical Statements</h2>
 									</header>
 
 									<div id="page-content">
-										<h2>"Funky Horn"</h2>
-										<h3>by Josh</h3>
 
-										<audio controls>
-											<source src="statements/funkyhorn.wav" type="audio/wav">
-										  Your browser does not support the audio element.
-										  </audio> 
+									<HR>
+									<h2>"Sandstronomia"</h2>
+									<h3>by Josh</h3>
+
+									<audio controls>
+										<source src="statements/Sandstronomia.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+										<!--<script type="syntaxhighlighter" class="brush: py"><![CDATA[
+										0 8
+										1 4
+									</script>!-->
 
 
-										<HR>
-										<h2>"Dichrome"</h2>
-										<h3>by not shark</h3>
+									<HR>
+									<h2>"Kind of Something"</h2>
+									<h3>by Anonymous</h3>
+
+									<audio controls>
+										<source src="statements/kindofsomething.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Whopper Whopper"</h2>
+									<h3>by Anonymous</h3>
+
+									<audio controls>
+										<source src="statements/whopperwhopper.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Craziness"</h2>
+									<h3>by Mike</h3>
+
+									<audio controls>
+										<source src="statements/craziness.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Bully, By the DeadBees"</h2>
+									<h3>Original song: いじめっ子Bully (Lofi version) by Calliope Mori</h3>
+									<h3>by Dylan Flink</h3>
+
+									<audio controls>
+										<source src="statements/bully.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+								
+									<HR>
+									<h2>"The Bees in Winter"</h2>
+									<h3>by MATHCSGuru2024</h3>
+
+									<audio controls>
+										<source src="statements/beesinwinter.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Fin It Bee" / "Low"</h2>
+									<h3>by Diane</h3>
+
+									<audio controls>
+										<source src="statements/FinItBe.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<audio controls>
+										<source src="statements/Low.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Mega Moon" / "Mega Bees"</h2>
+									<h3>by Kacey</h3>
 
 										<p>
-										I had a tune in my head which I know as "Monochrome."
-										I used the Piano Roll Editor to put down a bunch of notes
-										Without listening to what I had made until it was done, I tried to put down roughly what I thought it might sound like if it were to be visualized
-										What came out was unqiue enough, so I renamed it to "Dichrome"
+											the combination of MegaMan and The Moon from DuckTales NES with the pseudonym "Duckss". I also added mega_bees because I thought the MegaMan tune sounded very good with bees after I found the right parameters.
 										</p>
 
-										<audio controls>
-											<source src="statements/Dicrhome.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
+									<audio controls>
+										<source src="statements/megamoon.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
-										<HR>
-										<h2>"Ben"</h2>
-										<h3>by Ben</h3>
-
-										<audio controls>
-											<source src="statements/ben.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
-
-										<HR>
-											<h2>"Descent Into Madness"</h2>
-											<h3>by Mike E</h3>
-	
-											<audio controls>
-												<source src="statements/descent.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Random Notes"</h2>
-											<h3>by Dylan</h3>
-	
-											<audio controls>
-												<source src="statements/RandomNotes.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Star Wars"</h2>
-											<h3>by Abby</h3>
-	
-											<audio controls>
-												<source src="statements/starwars.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"2099"</h2>
-											<h3>by CS477GuruF2023</h3>
-	
-											<audio controls>
-												<source src="statements/2099.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-			
-										<HR>
-											<h2>"Age of Worry"</h2>
-											<h3>by John Mayer</h3>
-	
-											<audio controls>
-												<source src="statements/jm_ageofworry.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Pokemon Theme Song"</h2>
-											<h3>by Hannah Jeffers</h3>
-	
-											<audio controls>
-												<source src="statements/pokemonthemesong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+									<audio controls>
+										<source src="statements/megabees.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
 
-										<HR>
-											<h2>"The Clown Show"</h2>
-											<h3>by David</h3>
-	
-											<audio controls>
-												<source src="statements/mycombosong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+								<HR>
+									<h2>"The Bird Bash"</h2>
+									<h3>by Barney Cline</h3>
+
+									<audio controls>
+										<source src="statements/thebirdbash.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+								<HR>
+									<h2>"A Bassy Modern Major General"</h2>
+									<h3>by Emily Musgrove</h3>
+
+									<audio controls>
+										<source src="statements/bassymodern.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
 
-										<HR>
-											<h2>"Shark"</h2>
-											<h3>by Shark</h3>
-	
-											<audio controls>
-												<source src="statements/shark.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+								<HR>
+									<h2>"A Bee C by The Jackson 5"</h2>
+									<h3>by Brenden Reim</h3>
 
-										<!--
-										<HR>
-											<h2>"Ultimate Guitar Solo"</h2>
-											<h3>by Jeremy</h3>
-	
-											<audio controls>
-												<source src="statements/ultimateguitar.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-										-->
-	
-										<HR>
-											<h2>"Bomberger Bells"</h2>
-											<h3>by Emily Musgrove</h3>
-	
-											<audio controls>
-												<source src="statements/MaryHadALittleLambFM.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Industry Baby"</h2>
-											<h3>by Brenden</h3>
-
-											<p>
-												My musical statement is a recreation of the catchy trumpet parts from Industry Baby by Lil Nas X. It is composed of two different trumpets and a snare.
-											</p>
-	
-											<audio controls>
-												<source src="statements/Industry_Baby.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Alien Theme"</h2>
-											<h3>by A</h3>
-	
-											<audio controls>
-												<source src="statements/AlienTheme.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Clack Quack Sound"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/ClackQuacksound.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Missy Drum Duo"</h2>
-											<h3>by Tom Snipes</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Arcade Game Over"</h2>
-											<h3>by Panda</h3>
-	
-											<audio controls>
-												<source src="statements/MusicStatementJL.wav" type="audio/wav">
-												Your browser does not support the audio element.
-												</audio> 
+									<audio controls>
+										<source src="statements/abeec.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
 
-										<HR>
-											<h2>"In A Rush?"</h2>
-											<h3>by Ian</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+								<HR>
+									<h2>"Mr. Boing Sky"</h2>
+									<h3>by Snipes</h3>
 
-										<HR>
-											<h2>"Doctor Who Theme"</h2>
-											<h3>by James</h3>
-	
-											<audio controls>
-												<source src="statements/DWThemeMixed.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-												
-										<HR>
-											<h2>"Scary"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/scary.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+									<audio controls>
+										<source src="statements/mrboingsky.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+								<HR>
+									<h2>"WSC"</h2>
+									<h3>by Ian</h3>
+
+									<audio controls>
+										<source src="statements/wsc.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+								<HR>
+									<h2>"Doctor Who Theme"</h2>
+									<h3>by James</h3>
+									<h3>(using the <a href = "https://magenta.tensorflow.org/datasets/nsynth">nsynth dataset</a> as a source)</h3>
+
+									<audio controls>
+										<source src="statements/drwho.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+								<!--
+								<HR>
+									<h2>"Ambient Wind"</h2>
+									<h3>by Matt</h3>
+
+									<audio controls>
+										<source src="statements/ambientwind.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+								-->
+
                                 </div>
 						</div>
 					</div>
