--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -42,7 +42,8 @@
 								<section>
 									<header class="main">
                                         <h2>Assignment 3: Spectacular Spectrograms (50 Points)</h2>
-                                        <h3><a href = "http://www.ctralie.com">Chris Tralie</a>
+                                        <h3><a href = "http://www.ctralie.com">Chris Tralie</a></h3>
+										<h3><a href = "statements.html">Click here</a> to view musical statements</h3>
 									</header>
 
 									<div id="page-content">
@@ -794,9 +795,20 @@
 												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW3_Vocoders/statements.html">Musical Statements</a>
+													</li>
+												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
-												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a></li>
+												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW5_LetItBee/statements.html">Musical Statements</a>
+													</li>
+												</ul>
+												</li>
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
 											</ul>
 										</li>
