--- a/ClassExercises/Week4/Week4_CombFilters/index.html
+++ b/ClassExercises/Week4/Week4_CombFilters/index.html
@@ -180,9 +180,20 @@
 												</ul>
 												</li>
 												<li><a href = "../../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
+												<ul>
+													<li>
+														<a href = "../../../Assignments/HW3_Vocoders/statements.html">Musical Statements</a>
+													</li>
+												</ul>
 												</li>
 												<li><a href = "../../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
-												<li><a href = "../../../Assignments/HW5_LetItBee">HW5: Let It Bee</a></li>
+												<li><a href = "../../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
+												<ul>
+													<li>
+														<a href = "../../../Assignments/HW5_LetItBee/statements.html">Musical Statements</a>
+													</li>
+												</ul>
+												</li>
 												<li><a href = "../../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
 											</ul>
 										</li>
