Finalizing HW5 musical statements

--- a/Assignments/HW5_LetItBee/statements.html
+++ b/Assignments/HW5_LetItBee/statements.html
@@ -159,6 +159,15 @@
 										Your browser does not support the audio element.
 										</audio>
 
+								<HR>
+									<h2>"We Bill Rock You" (Queen ft Ducks)</h2>
+									<h3>by Abby Prince</h3>
+
+									<audio controls>
+										<source src="statements/webillrockyou.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
 
 								<HR>
 									<h2>"A Bee C by The Jackson 5"</h2>
@@ -180,6 +189,16 @@
 										</audio>
 
 								<HR>
+									<h2>"Space Chatter"</h2>
+									<h3>by Panda</h3>
+
+									<audio controls>
+										<source src="statements/wsc.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+								<HR>
 									<h2>"WSC"</h2>
 									<h3>by Ian</h3>
 
@@ -196,6 +215,19 @@
 
 									<audio controls>
 										<source src="statements/drwho.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+								<HR>
+									<h2>"Theo"</h2>
+									<h3>by Chris Tralie</h3>
+									<p>
+										We had to drive our dog Theo to get a checkup at the vet, and he hates the car.  At one point, "Take on Me" by Aha came on the radio.  In an effort to get Theo to calm down, I started to sing it to him.  Then I realized, I could have him sing along too by recording him at that moment and using "Let It Bee"
+									</p>
+
+									<audio controls>
+										<source src="statements/theo.mp3" type="audio/mp3">
 										Your browser does not support the audio element.
 										</audio>
 
