--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 <tr><td>14</td><td>Fri 2/17/2023</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td><ul><li><a href = "https://www.youtube.com/watch?v=Ffka-hPzug0">The Other Square Wave</a> (i.e. how we don't pereceive constant phase offsets)</li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
 </td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
