Adding musical statements

--- a/ClassExercises/Week9/Week9_MFCC/index.html
+++ b/ClassExercises/Week9/Week9_MFCC/index.html
@@ -212,7 +212,14 @@
 													</li>
 												</ul>
 												</li>
-												<li><a href = "../../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
+												<li><a href = "../../../Assignments/HW6_StringAlong">HW6: String Along</a>
+												<ul>
+													<li>
+														<a href = "../../../Assignments/HW6_StringAlong/statements.html">Musical Statements</a>
+													</li>
+												</ul>
+												
+												</li>
 											</ul>
 										</li>
 										<li>
