--- a/Assignments/HW6_StringAlong/index.html
+++ b/Assignments/HW6_StringAlong/index.html
@@ -43,6 +43,7 @@
 									<header class="main">
                                         <h2>Assignment 6: String Along (65 Points)</h2>
                                         <h3><a href = "http://www.ctralie.com">Chris Tralie</a>
+										<h3><a href = "statements">Click here</a> to listen to musical statements</h3>
 									</header>
 
 									<div id="page-content">
@@ -737,7 +738,14 @@
 													</li>
 												</ul>
 												</li>
-												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
+												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW6_StringAlong/statements.html">Musical Statements</a>
+													</li>
+												</ul>
+												
+												</li>
 											</ul>
 										</li>
 										<li>
