--- a/Assignments/HW6_StringAlong/statements.html
+++ b/Assignments/HW6_StringAlong/statements.html
@@ -41,215 +41,169 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-                                        <h1><a href = "index.html">Assignment 2: Digital Instruments</a></h1>
+                                        <h1><a href = "index.html">Assignment 6: String Along</a></h1>
                                         <h2>Musical Statements</h2>
 									</header>
 
 									<div id="page-content">
-										<h2>"Funky Horn"</h2>
-										<h3>by Josh</h3>
 
-										<audio controls>
-											<source src="statements/funkyhorn.wav" type="audio/wav">
-										  Your browser does not support the audio element.
-										  </audio> 
+									<HR>
+									<h2>"Applause"</h2>
+									<h3>by Josh Brown</h3>
+
+									<table>
+										<tr>
+											<td><h3>Before</h3></td>
+											<td><h3>After</h3></td>
+										</tr>
+										<tr>
+											<td>
+												<audio controls>
+													<source src="statements/applause_before.mp3" type="audio/mp3">
+													Your browser does not support the audio element.
+												</audio>
+											</td>
+											<td>
+												<audio controls>
+													<source src="statements/applause.mp3" type="audio/mp3">
+													Your browser does not support the audio element.
+												</audio>
+											</td>
+										</tr>
+									</table>
 
 
-										<HR>
-										<h2>"Dichrome"</h2>
-										<h3>by not shark</h3>
-
-										<p>
-										I had a tune in my head which I know as "Monochrome."
-										I used the Piano Roll Editor to put down a bunch of notes
-										Without listening to what I had made until it was done, I tried to put down roughly what I thought it might sound like if it were to be visualized
-										What came out was unqiue enough, so I renamed it to "Dichrome"
-										</p>
-
-										<audio controls>
-											<source src="statements/Dicrhome.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
-
-										<HR>
-										<h2>"Ben"</h2>
-										<h3>by Ben</h3>
-
-										<audio controls>
-											<source src="statements/ben.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
-
-										<HR>
-											<h2>"Descent Into Madness"</h2>
-											<h3>by Mike E</h3>
+									<HR>
+										<h2>"Mr. Independent"</h2>
+										<h3>by Will</h3>
 	
-											<audio controls>
-												<source src="statements/descent.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<table>
+											<tr>
+												<td><h3>Before</h3></td>
+												<td><h3>After</h3></td>
+											</tr>
+											<tr>
+												<td>
+													<audio controls>
+														<source src="statements/mrindependent_before.mp3" type="audio/mp3">
+														Your browser does not support the audio element.
+													</audio>
+												</td>
+												<td>
+													<audio controls>
+														<source src="statements/mrindependent.mp3" type="audio/mp3">
+														Your browser does not support the audio element.
+													</audio>
+												</td>
+											</tr>
+										</table>
+
+									<HR>
+										<h2>"Moon Violin"</h2>
+										<h3>by Ducks</h3>
+	
+										<table>
+											<tr>
+												<td><h3>Before</h3></td>
+												<td><h3>After</h3></td>
+											</tr>
+											<tr>
+												<td>
+
+												</td>
+												<td>
+													<audio controls>
+														<source src="statements/moon_violin.mp3" type="audio/mp3">
+														Your browser does not support the audio element.
+													</audio>
+												</td>
+											</tr>
+										</table>
+
+
+									<HR>
+										<h2>"The Arpeggio Performed by a Violin"</h2>
+										<h3>by Emily Musgrove</h3>
+	
+										<table>
+											<tr>
+												<td><h3>Before</h3></td>
+												<td><h3>After</h3></td>
+											</tr>
+											<tr>
+												<td>
+													<audio controls>
+														<source src="statements/arpeggioorig.mp3" type="audio/mp3">
+														Your browser does not support the audio element.
+													</audio>
+												</td>
+												<td>
+													<audio controls>
+														<source src="statements/arpeggio.mp3" type="audio/mp3">
+														Your browser does not support the audio element.
+													</audio>
+												</td>
+											</tr>
+										</table>
+
 
 										<HR>
-											<h2>"Random Notes"</h2>
-											<h3>by Dylan</h3>
-	
-											<audio controls>
-												<source src="statements/RandomNotes.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Star Wars"</h2>
-											<h3>by Abby</h3>
-	
-											<audio controls>
-												<source src="statements/starwars.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"2099"</h2>
-											<h3>by CS477GuruF2023</h3>
-	
-											<audio controls>
-												<source src="statements/2099.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-			
-										<HR>
-											<h2>"Age of Worry"</h2>
-											<h3>by John Mayer</h3>
-	
-											<audio controls>
-												<source src="statements/jm_ageofworry.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Pokemon Theme Song"</h2>
-											<h3>by Hannah Jeffers</h3>
-	
-											<audio controls>
-												<source src="statements/pokemonthemesong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-
-										<HR>
-											<h2>"The Clown Show"</h2>
-											<h3>by David</h3>
-	
-											<audio controls>
-												<source src="statements/mycombosong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-
-										<HR>
-											<h2>"Shark"</h2>
-											<h3>by Shark</h3>
-	
-											<audio controls>
-												<source src="statements/shark.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<!--
-										<HR>
-											<h2>"Ultimate Guitar Solo"</h2>
-											<h3>by Jeremy</h3>
-	
-											<audio controls>
-												<source src="statements/ultimateguitar.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-										-->
-	
-										<HR>
-											<h2>"Bomberger Bells"</h2>
-											<h3>by Emily Musgrove</h3>
-	
-											<audio controls>
-												<source src="statements/MaryHadALittleLambFM.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Industry Baby"</h2>
-											<h3>by Brenden</h3>
-
+											<h2>"Violin Ni Kakeru (Racing into The Violin)"</h2>
+											<h3>by Brenden Reim</h3>
+		
 											<p>
-												My musical statement is a recreation of the catchy trumpet parts from Industry Baby by Lil Nas X. It is composed of two different trumpets and a snare.
+												The title for my musical statement is Violin Ni Kakeru, based on the song Yoru Ni Kakeru by YOASOBI. (Translated title would be Racing Into the Night, or in my case, Racing Into the Violin)
 											</p>
-	
-											<audio controls>
-												<source src="statements/Industry_Baby.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
 
-										<HR>
-											<h2>"Alien Theme"</h2>
-											<h3>by A</h3>
-	
-											<audio controls>
-												<source src="statements/AlienTheme.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Clack Quack Sound"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/ClackQuacksound.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Missy Drum Duo"</h2>
-											<h3>by Tom Snipes</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Arcade Game Over"</h2>
-											<h3>by Panda</h3>
-	
-											<audio controls>
-												<source src="statements/MusicStatementJL.wav" type="audio/wav">
-												Your browser does not support the audio element.
-												</audio> 
+											<table>
+												<tr>
+													<td><h3>Before</h3></td>
+													<td><h3>After</h3></td>
+												</tr>
+												<tr>
+													<td>
+														<audio controls>
+															<source src="statements/kakeruorig.mp3" type="audio/mp3">
+															Your browser does not support the audio element.
+														</audio>
+													</td>
+													<td>
+														<audio controls>
+															<source src="statements/kakeruviolin.mp3" type="audio/mp3">
+															Your browser does not support the audio element.
+														</audio>
+													</td>
+												</tr>
+											</table>
 
 
 										<HR>
-											<h2>"In A Rush?"</h2>
-											<h3>by Ian</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+											<h2>"Violin-ifyed Digital Instruments"</h2>
+											<h3>by James Waring</h3>
 
-										<HR>
-											<h2>"Doctor Who Theme"</h2>
-											<h3>by James</h3>
-	
-											<audio controls>
-												<source src="statements/DWThemeMixed.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-												
-										<HR>
-											<h2>"Scary"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/scary.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+											<table>
+												<tr>
+													<td><h3>Before</h3></td>
+													<td><h3>After</h3></td>
+												</tr>
+												<tr>
+													<td>
+		
+													</td>
+													<td>
+														<audio controls>
+															<source src="statements/instruments.mp3" type="audio/mp3">
+															Your browser does not support the audio element.
+														</audio>
+													</td>
+												</tr>
+											</table>
+
+										<!--<script type="syntaxhighlighter" class="brush: py"><![CDATA[
+										0 8
+										1 4
+									</script>!-->
+
                                 </div>
 						</div>
 					</div>
