--- a/Assignments/HW2_DigitalInstruments/statements.html
+++ b/Assignments/HW2_DigitalInstruments/statements.html
@@ -67,7 +67,7 @@
 										</p>
 
 										<audio controls>
-											<source src="statements/Dicrhome.mp3" type="audio/mp3">
+											<source src="statements/Dichrome.mp3" type="audio/mp3">
 											Your browser does not support the audio element.
 											</audio> 
 
