--- a/Assignments/HW5_LetItBee/statements.html
+++ b/Assignments/HW5_LetItBee/statements.html
@@ -207,6 +207,14 @@
 										Your browser does not support the audio element.
 										</audio>
 
+								<HR>
+									<h2>"Buzzing Adele"</h2>
+									<h3>by Hannah</h3>
+
+										<audio controls>
+										<source src="statements/adele.mp3" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
 								<HR>
 									<h2>"Doctor Who Theme"</h2>
