Working on moving risset notes around, getting rid of old modules

--- a/Software/index.html
+++ b/Software/index.html
@@ -44,7 +44,11 @@
 										<h1>Software Environment</h1>
                                     </header>
 									<p>
-										We will be using a distribution of python known as <a href = "https://www.anaconda.com/distribution/">Anaconda Python</a>, which comes shipped with the majority of the tools that we need for the course.  <a href = "https://www.anaconda.com/distribution/">Click here</a> to download Anaconda.  Please choose the 64-bit version of <b>Python 3.9</b> for your operating system (Windows/Mac/Linux), download it, and follow the default options during installation, includng registering this as the default Python for your system.
+										<b>NOTE: </b> If you have previously installed anaconda python 3.9, 3.10, 3.11, or 3.12 for another course like <a href = "https://ursinusdatastructures.github.io/F2024/">CS 271</a>, you will be fine to use that and do not need to install anything new.
+									</p>
+
+									<p>
+										We will be using a distribution of python known as <a href = "https://www.anaconda.com/download/success">Anaconda Python</a>, which comes shipped with the majority of the tools that we need for the course.  <a href = "https://www.anaconda.com/download/success">Click here</a> to download Anaconda.  Choose the 64-bit version of <b>Python 3.12</b> for your operating system (Windows/Mac/Linux), download it, and follow the default options during installation, including registering this as the default Python for your system.
 									</p>
 
 									<p>
@@ -130,19 +134,21 @@
 											<ul>
 												<li>
 													<a href = "../Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
-													<ul>
+													<!--<ul>
 														<li>
 															<a href = "../Assignments/HW1_RissetBeats/statements.html">Musical Statements</a>
 														</li>
-													</ul>
+													</ul>!-->
 												</li>
 												<li><a href = "../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
-												<ul>
+												<!--<ul>
 													<li>
 														<a href = "../Assignments/HW2_DigitalInstruments/statements.html">Musical Statements</a>
 													</li>
-												</ul>
+												</ul>!-->
 												</li>
+												
+												<!--
 												<li><a href = "../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												<ul>
 													<li>
@@ -166,6 +172,7 @@
 												</ul>
 												
 												</li>
+												-->
 											</ul>
 										</li>
 										<li>
@@ -192,7 +199,6 @@
 												<li><a href = "../ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "../ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
-												<li><a href = "https://github.com/ursinus-cs372-s2023/Week15_WaveUNet/blob/main/WaveUNetSol.ipynb">Week 15: Wave-U-Net</a></li>
 											</ul>
 										</li>
                                         <li>
