Linking to notes on risset beats

--- a/ClassExercises/Week4/Week4_CombFilters/index.html
+++ b/ClassExercises/Week4/Week4_CombFilters/index.html
@@ -212,6 +212,7 @@
 											<ul>
 												<li><a href = "../../../ClassExercises/Week1/Week1_AudioReverseGame/">Week 1: Audio Reverse Game</a></li>
 												<li><a href = "../../../ClassExercises/Week2/Week2_BeatPhase/index.html">Week 2: Beat Phase</a></li>
+												<li><a href = "../../../ClassExercises/RissetNotes/index.html">Week 2: Notes on Risset Beats</a></li>
 												<li><a href = "../../../ClassExercises/Week2/Week2_Harmonicity/index.html">Week 2: Harmonicity</a></li>
 												<li><a href = "../../../ClassExercises/Week3/Week3_ZCS_Loudness/index.html">Week 3: Zero Crossings And Loudness Perception</a></li>
 												<li><a href = "../../../ClassExercises/Week3/Week3_Timbre/index.html">Week 3: Harmonics And Timbre</a></li>
