--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 <tr><td>14</td><td>Fri 2/21/2025</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT</a> Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/24/2025</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td bgcolor=#f4e6e7>Assignment 2 Submission 2 Due
-<HR>Assignment 3: Spectacular Spectrograms Out
+<HR><a href = "Assignments/HW3_Vocoders/index.html">Assignment 3: Spectacular Spectrograms</a> Out
 </td></tr>
 <tr><td>16</td><td>Wed 2/26/2025</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td><ul><li><a href = "https://www.youtube.com/watch?v=Ffka-hPzug0">The Other Square Wave</a> (i.e. how we don't pereceive constant phase offsets)</li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
@@ -511,7 +511,7 @@
 <tr><td>22</td><td>Wed 3/19/2025</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audio Onsets/Offsets</a> Due Before Class
 </td></tr>
 <tr><td>23</td><td>Fri 3/21/2025</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7>Assignment 3 Submission 2 Due
-<HR><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a> Out
+<HR>HW4: Tempo Estimation And Beat Tracking Out
 </td></tr>
 <tr><td>24</td><td>Mon 3/24/2025</td><td>Matrix Multiplication, Dynamic Programming Beat Tracking</td><td><ul><li><a href = "ClassExercises/BeattrackNotes">Notes on dynamic programming beat tracking</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class
 </td></tr>
@@ -542,7 +542,7 @@
 </td></tr>
 <tr><td>--</td><td>Wed 4/23/2025</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>37</td><td>Fri 4/25/2025</td><td>Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td bgcolor=#f4e6e7>HW5 Due
-<HR><a href = "Assignments/HW6_StringAlong">HW6: String Along</a> Out
+<HR>HW6: String Along Out
 </td></tr>
 <tr><td>38</td><td>Mon 4/28/2025</td><td>Convolutional Neural Networks, Data Augmentation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a> Due Before Class
 </td></tr>
@@ -1005,15 +1005,14 @@
 													</li>
 												</ul>!-->
 												</li>
-												
-												<!--
 												<li><a href = "Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
-												<ul>
+												<!--<ul>
 													<li>
 														<a href = "Assignments/HW3_Vocoders/statements.html">Musical Statements</a>
 													</li>
-												</ul>
+												</ul>!-->
 												</li>
+												<!--
 												<li><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
 												<li><a href = "Assignments/HW5_LetItBee">HW5: Let It Bee</a>
 												<ul>
