Updating deadlines, etc

--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -127,7 +127,7 @@
 										</p>
 										<p>
 											
-											For the second submission, also submit an audio file for your musical statement and all of the txt files, audio files, and code that is needed to run your code used to create that statement.  Please also submit the code or notebook you used to make the musical statement.  Finally, please submit answers to the following questions on Canvas
+											For the second submission, also submit an audio file for your musical statement and all of the txt files, audio files, and code that is needed to run your code used to create that statement.  Finally, please submit answers to the following questions on Canvas
 										
 										<ol>
 											<li>
@@ -784,7 +784,11 @@
 												<li><a href = "../../index.html#overview">Overview</a></li>
 												<li><a href = "../../index.html#logistics">Technology Logistics</a></li>
 												<li><a href = "../../index.html#homework">Homework</a></li>
-												<li><a href = "../../index.html#grading">Grading</a></li>
+												<li><a href = "../../index.html#grading">Grading</a>
+													<ul>
+														<li><a href = "../../index.html#deadlines">Deadlines Policy</a></li>
+													</ul>
+												</li>
 												<li><a href = "../../index.html#environment">Classroom Environment</a></li>
 												<li><a href = "../../index.html#participation">Participation</a></li>
 												<li><a href = "../../index.html#collaboration">Collaboration Policy</a></li>
