Updating piano roll link and adding anonymous quesiton link

--- a/ClassExercises/Week6/ComplexDFT/index.html
+++ b/ClassExercises/Week6/ComplexDFT/index.html
@@ -161,7 +161,7 @@
 											</ul> 
 										</li>
 										<li><a href = "../../../Software/index.html">Software</a></li>
-										<li><a href = "../../../webaudio-pianoroll/index.html">Piano Roll Editor</a></li>
+										<li><a href = "../../../../webaudio-pianoroll/index.html">Piano Roll Editor</a></li>
 										<li><a href = "../../../index.html#schedule">Schedule</a></li>
                                         <li>
 											<span class="opener">Assignments</span>
@@ -262,6 +262,7 @@
 												<li><a href = "../../../../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a></li>
 											</ul>
 										</li>
+										<li><a href = "https://docs.google.com/forms/d/e/1FAIpQLSfwkO_w_Ku-n2Ou6J7pF--i0C2-a20Ov9wf690T6cYx80ASsw/viewform?usp=sf_link">Anonymous Question</a></li>
 									</ul>
 								</nav>
 
