Updating some links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 													<img src = "OverviewPictures/Concatenator.svg" width="100%">
 													</center>
 													<p>
-														A schematic of <a href = "www.ctralie.com/TheConcatenator">The Concatenator</a>, a new synthesis technique I invented to automatically mash up sounds in a corpus to match the rhythm and pitch of an incoming target.  Students will implement a vanilla version of this in HW5.
+														A schematic of <a href = "https://www.ctralie.com/TheConcatenator">The Concatenator</a>, a new synthesis technique I invented to automatically mash up sounds in a corpus to match the rhythm and pitch of an incoming target.  Students will implement a vanilla version of this in HW5.
 													</p>
 												</div>
 
@@ -170,6 +170,9 @@
 												<a href = "http://www.ctralie.com">Christopher J. Tralie</a>
 											</p>
 											<img src = "ctralie_headshot.jpg" width="80%">
+											<p>
+												Picture from <a href = "https://www.dagstuhl.de/seminars/seminar-calendar/seminar-details/24302">Dagstuhl summer 2024</a>
+											</p>
 											
 											<p>
 												I grew up right around the corner in the Montgomery County and attended <a href = "https://www.udsd.org/schools/udhs/">Upper Dublin High school</a> (class of 2007).  I then did my undergraduate degree in <a href = "https://ee.princeton.edu/">Electrical Engineering</a> at Princeton University and my master's and Ph.D. degrees in <a href = "https://ece.duke.edu/">Electrical And Computer Engineering</a> at Duke University (heavily studying math and CS along the way).  I finally started my dream job at Ursinus College in Fall of 2019!  You can read more about my interests on my <a href = "http://www.ctralie.com/">professional web site</a>.  Looking forward to getting to know everyone as we work through this course together!
