--- a/index.html
+++ b/index.html
@@ -286,34 +286,20 @@
 													</td>
 												</tr>
 												<tr>
-													<td>Microsoft Teams</td>
-													<td>
-														<ul>
-															<li><a href = "#buddy">Buddy</a> Collaborations/Screen Sharing</li>
-															<li>
-																Individual chat with Prof. Tralie of a less sensitive nature (e.g. tech support, assignment questions not appropriate for the entire class)
-															</li>
-															<li>
-																Individual chat with Prof. Tralie of a more sensitive/private nature (e.g. questions about grades, academic planning, personal issues) <a href = "#sensitive">(*)</a>
-															</li>
-														</ul>
-													</td>
-												</tr>
-												<tr>
 													<td>
 														E-mail
 													</td>
 													<td>
 														<ul>
 															<li>Announcements</li>
-															<li>Individual chat with Prof. Tralie of a more sensitive/private nature (e.g. questions about grades, academic planning, personal issues), <i>though I prefer Microsoft Teams for this and will respond more quickly over Teams</i></li>
-															<li>Individual chat with Prof. Tralie of a less sensitive nature (e.g. tech support, assignment questions not appropriate for the entire class), <i>though I prefer Microsoft Teams or Discord for this and will respond more quickly over Teams</i></li>
+															<li>Individual chat with Prof. Tralie of a more sensitive/private nature (e.g. questions about grades, academic planning, personal issues)</li>
+															<li>Individual chat with Prof. Tralie of a less sensitive nature (e.g. tech support, assignment questions not appropriate for the entire class), <i>though I prefer Discord for this and will respond more quickly there</i></li>
 														</ul>
 													</td>
 												</tr>
 											</table>
 											<p>
-												<a name = "sensitive">*</a>: For <a href = "https://en.wikipedia.org/wiki/Family_Educational_Rights_and_Privacy_Act">privacy reasons</a>, anything of a personal nature, and particularly things that have to with educational records (e.g. grades), need to be kept within Ursinus sanctioned platforms like Outlook e-mail and Microsoft Teams.
+												<a name = "sensitive">*</a>: For <a href = "https://en.wikipedia.org/wiki/Family_Educational_Rights_and_Privacy_Act">privacy reasons</a>, anything of a personal nature, and particularly things that have to with educational records (e.g. grades), need to be kept within Ursinus sanctioned platforms like Outlook e-mail.
 											</p>
 	
 											<h3>Canvas</h3>
@@ -362,17 +348,9 @@
 
 											<h4>Other Rules</h4>
 											<p>
-												<b>Do not</b> send me direct messages or anything of a sensitive nature (e.g. grades) over Discord.  Instead, use <a href = "#teams">Microsoft Teams</a> or e-mail for that, since those transactions are locked down better under Ursinus control.
+												<b>Do not</b> send me direct messages or anything of a sensitive nature (e.g. grades) over Discord.  Instead, use e-mail for that, since those transactions are locked down better under Ursinus control.
 											</p>
 
-
-											
-	
-	
-											<h3><a name = "teams">Microsoft Teams</a></h3>
-											<p>
-												For one on one direct messages with me, and for <a href = "#buddy">buddy group coding</a> with screen sharing, we will be using  <a href = "https://insights.ursinus.edu/display/LEI/Microsoft+Teams">Microsoft Teams</a>, which is linked to your Office suite through Ursinus, so you are automatically enrolled.  This is an easy platform for students to initiate video sharing, so I highly recommend it for group work.
-											</p>
 
 
 
@@ -381,6 +359,9 @@
 											<h2><a name = "readings">Readings</a></h2>
 											<p>
 												There will be no official textbook for the course.  Instead, I will be flipping about 2/3 of the classes with a number of <a href = "#preclass">modules that I made</a> for you to complete before class.
+											</p>
+											<p>
+												At times, I will provide readings/links to a <a href = "https://brianmcfee.net/dstbook-site/content/intro.html">wonderful, freely available textbook on digital signal processing</a> by Brian McFee, the creator of <a href = "https://librosa.org/">librosa</a>, to supplement the modules and in class work
 											</p>
 
 
@@ -731,17 +712,6 @@
 											</p>
 
 											<img src = "Netiquette-Online-Discussion-Boards-infographic.png">
-
-
-
-											<!--
-                                                <ul>
-                                                    <li>Helping to teach a student a topic during student office hours.</li>
-                                                    <li>Certain calls for participation in class</li>
-                                                    <li>Particularly helpful or insightful messages on Microsoft Teams</li>
-                                                    <li>Finding mistakes in the book or on the assigned homework and labs</li>
-												</ul>
-											-->
                                             </p>
 
 											
